k8s/basic/jaeger-all-in-one-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: jaeger-all-in-one
  name: jaeger-all-in-one
  namespace: quarkus-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: jaeger-all-in-one
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/component: jaeger-all-in-one
    spec:
      containers:
        - image: jaegertracing/all-in-one:latest
          name: jaeger-all-in-one
          ports:
            - containerPort: 16686
            - containerPort: 14268
            - containerPort: 14250
          resources: {}
      restartPolicy: Always
status: {}
