k8s/basic/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: database
  name: database
  namespace: quarkus-demo
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/component: database
status:
  loadBalancer: {}
