k8s/basic/jaeger-all-in-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: jaeger-all-in-one
  name: jaeger-all-in-one
  namespace: quarkus-demo
spec:
  ports:
    - name: web
      port: 16686
      targetPort: 16686
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "14250"
      port: 14250
      targetPort: 14250
  selector:
    app.kubernetes.io/component: jaeger-all-in-one
status:
  loadBalancer: {}
